[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lowprev-lsip"
version = "0.0.1a0"
license = "BSD-2-Clause"
description = "Linear semi-infinite programming algorithms for lower previsions."
readme = "README.rst"
requires-python = ">=3.9"
authors = [
    {email = "matthias.troffaes@gmail.com"},
    {name = "Matthias C. M. Troffaes"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
    "scipy",
]

[tool.mypy]
exclude = ["^.*venv.*/"]
